Add idea files to  .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,14 @@ replay_pid*
 
 # Ignore Gradle project-specific cache directory
 .gradle
+/buildSrc/.gradle/
 
 # Ignore Gradle build output directory
 build
+out
+
+#Idea
+*.iml
+*.iws
+*.ipr
+*.idea
