--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Package Files #
 *.jar
+!gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -32,6 +33,7 @@ build
 out
 
 #Idea
+.idea/*
 *.iml
 *.iws
 *.ipr
