--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.caching=true
 
 # -------Versions--------
 guava=33.0.0-jre
+testcontainersBom=1.19.1
 
 # -------Plugins---------
 dependencyManagement=1.1.5
